<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_parcela"
        android:icon="@drawable/ic_parcela_black_24dp"
        android:title="@string/title_parcela" />

    <item
        android:id="@+id/navigation_calendario"
        android:icon="@drawable/ic_calendario_black_24dp"
        android:title="@string/title_calendario" />

    <item
        android:id="@+id/navigation_cuaderno"
        android:icon="@drawable/ic_cuaderno_black_24dp"
        android:title="@string/title_cuaderno" />

    <item
        android:id="@+id/navigation_almacen"
        android:icon="@drawable/ic_almacen_black_24dp"
        android:title="@string/title_almacen" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_perfil_black_24dp"
        android:title="@string/title_perfil" />

</menu>