<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_cuaderno">

    <fragment
        android:id="@+id/navigation_parcela"
        android:name="com.navarromanuel.adescoapp.ui.parcela.ParcelaFragment"
        android:label="@string/title_parcela"
        tools:layout="@layout/fragment_parcela" />

    <fragment
        android:id="@+id/navigation_calendario"
        android:name="com.navarromanuel.adescoapp.ui.calendario.CalendarioFragment"
        android:label="@string/title_calendario"
        tools:layout="@layout/fragment_calendario" />

    <fragment
        android:id="@+id/navigation_cuaderno"
        android:name="com.navarromanuel.adescoapp.ui.cuaderno.CuadernoFragment"
        android:label="@string/title_cuaderno"
        tools:layout="@layout/fragment_cuaderno" />

    <fragment
        android:id="@+id/navigation_almacen"
        android:name="com.navarromanuel.adescoapp.ui.almacen.AlmacenFragment"
        android:label="@string/title_almacen"
        tools:layout="@layout/fragment_almacen" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.navarromanuel.adescoapp.ui.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>